crates/general/fixtures/invalid/list_missing_semicolon.zt
-- List items are semicolon terminated.

{ 1; 2 }
